--- a/index.css
+++ b/index.css
@@ -1,56 +1,97 @@
-.form{
-    padding: 30px 40px;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
 }
-.form-control{
-   margin-bottom: 10px;
-   padding-bottom: 20px;
-   position: relative;
+
+* {
+  box-sizing: border-box;
 }
+
+body {
+  background: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url("./img1.jpg");
+  background-position: center;
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+
+}
+
+.container {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  width: 400px;
+}
+
+h2 {
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.form {
+  padding: 30px 40px;
+}
+
+.form-control {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
 .form-control label {
-    display: inline-block;
-    margin-bottom: 5px;
+  color: #777;
+  display: block;
+  margin-bottom: 5px;
 }
-.form-control input{
-    border: 2px solid #f0f0f0;
-    border-radius: 4px;
-    display: block;
-    font-family: inherit;
-    font-size: 14px;
-    padding:10px;
-    width: 100%;
+
+.form-control input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  font-size: 14px;
 }
-.form-control input:focus{
-    outline: 0;
-    border-color: #777;
+
+.form-control input:focus {
+  outline: 0;
+  border-color: #777;
 }
-.form-control.success i.fa-check-circle{
-  color: #2ecc71;
+
+.form-control.success input {
+  border-color: var(--success-color);
+}
+
+.form-control.error input {
+  border-color: var(--error-color);
+}
+
+.form-control small {
+  color: var(--error-color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.form-control.error small {
   visibility: visible;
 }
-.form-control.error i.fa-exclamation-circle{
-    color: #e74c3c;
-    visibility: visible;
-}
-.form-control small{
-    color: #e74c3c;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    visibility: hidden;
-}
-.form-control.error small{
-    visibility: visible;
-}
-.form button{
-    background-color: #8e44ad;
-    border: 2px solid #8e44ad;
-    border-radius: 4px;
-    color: #fff;
-    display: block;
-    font-family: inherit;
-    font-size: 16px;
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    width: 100%;
+
+.form button {
+  cursor: pointer;
+  background-color: #3498db;
+  border: 2px solid #3498db;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
